Fix - Design issue in spacing while latest post

--- a/sass/_normalize.scss
+++ b/sass/_normalize.scss
@@ -496,7 +496,7 @@ a:focus {
 	outline: 0;
 }
 
-#main {
+.page-header-disable .site-content {
 	margin-top: 30px;
 }
 
