--- a/style.css
+++ b/style.css
@@ -451,7 +451,7 @@ a:focus {
 #content[tabindex="-1"]:focus {
   outline: 0; }
 
-#main {
+.page-header-disable .site-content {
   margin-top: 30px; }
 
 /*--------------------------------------------------------------
